--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
         <title>Indecision App</title>
         <link rel="icon" type="image/png" href="/images/favicon.png" />
         <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108570817-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-108570817-1');
+        </script>
     </head>
     <body>
         <div id="app"></div>
